# test_desktop_github_actions

./: .eslintrc  .gitignore  .stylelintrc  UPDATE_LOG.md  auto-imports.d.ts  components.d.ts  index.html  package.json  tauri-command.d.ts  test.mjs  tsconfig.json  typed-router.d.ts  unocss.config.ts  vite.config.ts
.github/workflows/: _release.yml  release.yml
docs/: tauri-apis.md
locales/: de.json  en.json  es.json  fr.json  ja.json  ka.json  ko.json  pt.json  ru.json  zh_Hans.json  zh_Hant.json
public/: splashscreen.html
scripts/: genTauriCommandType.ts  prepareArtifactPaths.mjs  publish.mjs  publish.sh  updater.mjs
src/: App.vue  main.ts  styles.scss  vite-env.d.ts
src-tauri/: .env  .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/locales/: de.yml  en.yml  es.yml  fr.yml  ja.yml  ka.yml  ko.yml  pt.yml  ru.yml  zh_Hans.yml  zh_Hant.yml
src-tauri/schema/private/migrations/: 20231009155923_user.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: db.rs  latest_login.rs  mod.rs  node.rs  user.rs
src-tauri/src/error/: bad_request.rs  mod.rs
src-tauri/src/error/api/: account_update_token.rs  info.rs  init_database.rs  login.rs  logout.rs  mod.rs  node.rs  ping.rs  splashscreen.rs  upload_log.rs
src-tauri/src/error/common/: database.rs  http.rs  io.rs  jwt.rs  language.rs  middleware.rs  mod.rs  param.rs  parse.rs  storage.rs  system_tray.rs
src-tauri/src/i18n/: mod.rs
src-tauri/src/rpc/: param.rs
src-tauri/src/service/: mod.rs  param.rs
src-tauri/src/service/api/: action.rs  event.rs  mod.rs  service.rs
src-tauri/src/service/node/: action.rs  command.rs  init.rs  mod.rs
src-tauri/src/service/node/notify/: mod.rs  pack.rs  payload.rs
src-tauri/src/service/tauri/: action.rs  event.rs  mod.rs  service.rs
src-tauri/src/sys/: action.rs  mod.rs  system_info.rs
src-tauri/src/utils/: cfg.rs  crypto.rs  final_response.rs  fun.rs  http.rs  mod.rs  req.rs  response.rs  signature.rs  state.rs  time.rs  totp.rs
src/components/: AutostartToggle.vue  CountdownTimer.vue  LanguageSelect.vue  PurchaseButton.vue  RouteLineSelector.vue
src/components/layout/: DropdownMenu.vue  TitleBar.vue
src/components/sharp/: Form.vue  Modal.vue
src/composables/: useIFetch.ts  useInvoke.ts  useTheme.ts
src/layouts/: default.vue
src/modules/: i18n.ts  router.ts
src/pages/: index.vue  preferences.vue  version-check.vue
src/pages/auth/: index.vue  login.vue  signup.vue
src/stores/: account-info.ts  app-state.ts  modal.ts  route-line.ts
src/types/: index.ts
src/utils/: fetch-encrypt.ts  index.ts
