[package]
name = "ram-flux"
version = "1.0.0-rc2"
description = "A vpn client for ram-flux"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
rf-node-client-desktop = { git = "ssh://git@github.com:22/ram-flux/rf-node-client-desktop" }
tauri = { version = "1.2", features = [ "process-relaunch",
    "updater",
    "path-all",
    "window-unmaximize",
    "macos-private-api",
    "shell-all",
    "window-hide",
    "window-unminimize",
    "window-close",
    "window-start-dragging",
    "http-all",
    "window-minimize",
    "fs-all",
    "window-show",
    "icon-png",
    "system-tray",
] }
# fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
window-shadows = "0.2.0"

# log
tracing = "0.1.31"
tracing-appender = "0.2.1"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.3", features = ["codec"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

# signature
hmac-sha256 = "1.1.4"
sha256 = "1.1.1"
base64 = "0.21"

# crypto
jsonwebtoken = "9"
aes-gcm = { version = "0.10.2" }
hex = { version = "0.4", features = ["serde"] }
sha3 = "0.10.8"
sha2 = "0.10.8"
md-5 = "0.10.6"

reqwest = { version = "0.11.13", features = ["blocking", "json", "multipart"] }
surge-ping = "0.8"
rand = "0.8.5"
sysinfo = "0.29"
libc = "0.2"

# node
anyhow = "1.0.71"
thiserror = { version = "1" }
once_cell = { version = "1", default-features = false }
crossbeam-channel = "0.5"
regex = "1.5"

sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
] }
mac_address = "1.1.5"

# time and number and maps
chrono = "0.4.23"
dashmap = "5.4.0"
rust_decimal = "1.27"
rust_decimal_macros = "1.27"

# email
validator = "0.12.0"

# tauri plugins
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

# internationalization
rust-i18n = "2"

rand_core = { version = "0.6", features = ["getrandom"] }
x25519-dalek = { version = "2.0.0", features = [
    "reusable_secrets",
    "static_secrets",
] }


[features]
test = []
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
structopt = "0.3.26"
futures = "0.3.25"
